[metadata]
name = masakari-monitors-icmp-plugin
summary = masakari hostmonitor plugin using icmp to detective host.
description-file =
    README.rst
author = Lucas.hua
author-email = binhong.hua@gmail.com,
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    masakari_monitors_icmp_plugin

[entry_points]
hostmonitor.driver =
    icmp = masakari_monitors_icmp_plugin.hostmonitor.host_handler_icmp.handle_host:HandleHost

oslo.config.opts =
    masakarimonitors.host_icmp.conf = masakari_monitors_icmp_plugin.conf.host_icmp:list_opts

[compile_catalog]
directory = masakari-monitors-icmp-plugin/locale
domain = masakari-monitors-icmp-plugin

[update_catalog]
domain = masakari-monitors-icmp-plugin
output_dir = masakari-monitors-icmp-plugin/locale
input_file = masakari-monitors-icmp-plugin/locale/masakari-monitors-icmp-plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = masakari-monitors-icmp-plugin/locale/masakari-monitors-icmp-plugin.pot
